# owncloud-sync-client

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  justfile  package.json
.claude/skills/: translate-strings.md
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: alpha.yml  build-packages.yml  ci.yml  package.yml  release.yml
crates/acceptance-test/: Cargo.toml
crates/acceptance-test/src/: atspi_client.rs  daemon_ipc.rs  fixture.rs  lib.rs  ocis_client.rs  playwright.rs  poll.rs  provision.rs  testutil.rs
crates/acceptance-test/tests/: account_setup.rs  delete.rs  duplicate_account.rs  edit.rs  move_rename.rs  multi_account.rs  oc10_account_setup.rs  oc10_delete.rs  oc10_edit.rs  oc10_sync.rs  pause_resume.rs  remove_account.rs  remove_one_of_two.rs  space_roles.rs  sync.rs  tray.rs
crates/daemon/: Cargo.toml
crates/daemon/resources/oauth/: error.html  success.html
crates/daemon/src/: config.rs  folder_manager.rs  lib.rs  lock.rs  main.rs  oidc_callback.rs  paths.rs  scheduler.rs  space_poller.rs  vfs_factory.rs  watcher.rs
crates/daemon/src/gui_ipc/: handler.rs  mod.rs  protocol.rs
crates/daemon/tests/: config_tests.rs  handler_tests.rs  ipc_tests.rs  scheduler_tests.rs  space_poller_tests.rs
crates/gui/: Cargo.toml  build.rs
crates/gui-core/: Cargo.toml
crates/gui-core/src/: action.rs  core.rs  daemon_conn.rs  lib.rs  model.rs  spawn.rs  view_model.rs
crates/gui-gtk/: Cargo.toml
crates/gui-gtk/src/: main.rs  tray.rs  window.rs
crates/gui-macos/: Cargo.toml
crates/gui-macos/src/: main.rs  tray.rs  window.rs
crates/gui-windows/: Cargo.toml
crates/gui-windows/src/: main.rs  tray.rs  window.rs
crates/gui/locales/: de.yml  en.yml  fr.yml  zh.yml
crates/gui/src/: app.rs  daemon_conn.rs  gui_config.rs  i18n.rs  i18n_tests.rs  lib.rs  macos_icon.rs  macos_menu.rs  main.rs  model.rs  spawn.rs  subscription.rs  theme.rs  tray.rs
crates/gui/src/views/: about.rs  account_settings.rs  add_account.rs  add_account_waiting.rs  folder_errors.rs  general_settings.rs  mod.rs  pick_local_folder.rs  pick_root_folder.rs  pick_spaces.rs  sync_status.rs
crates/gui/tests/: daemon_conn_tests.rs  gui_config_tests.rs  model_tests.rs  spawn_tests.rs  subscription_tests.rs  update_tests.rs
crates/ocis-client/: Cargo.toml
crates/ocis-client/src/: capabilities.rs  error.rs  lib.rs  webfinger.rs
crates/ocis-client/src/auth/: keychain.rs  mod.rs  oidc.rs  token_manager.rs
crates/ocis-client/src/graph/: mod.rs
crates/ocis-client/src/tus/: mod.rs
crates/ocis-client/src/webdav/: mod.rs  propfind.rs
crates/ocis-client/tests/: graph_tests.rs  token_manager_tests.rs  tus_tests.rs  webdav_tests.rs
crates/socket-api/: Cargo.toml
crates/socket-api/src/: broadcast.rs  error.rs  lib.rs  protocol.rs  server.rs  status_resolver.rs
crates/socket-api/src/commands/: menu.rs  mod.rs  share.rs  status.rs  v2.rs  vfs_cmds.rs
crates/socket-api/src/transport/: mod.rs  unix.rs  windows.rs
crates/socket-api/tests/: broadcast_tests.rs  command_menu_tests.rs  command_share_v2_tests.rs  command_status_tests.rs  command_vfs_tests.rs  error_variants.rs  protocol_tests.rs  server_tests.rs  server_unit_tests.rs  status_resolver_tests.rs  unix_transport_tests.rs
crates/sync-db/: Cargo.toml
crates/sync-db/migrations/: 001_initial.sql
crates/sync-db/src/: db.rs  error.rs  lib.rs  models.rs
crates/sync-db/tests/: db_tests.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: engine.rs  error.rs  lib.rs  reconcile.rs  report.rs  state.rs  types.rs
crates/sync-engine/src/discovery/: local.rs  mod.rs  remote.rs
crates/sync-engine/src/propagate/: conflict.rs  download.rs  mod.rs  ops.rs  upload.rs
crates/sync-engine/tests/: engine_tests.rs  error_variants.rs  local_discovery.rs  propagate_download.rs  propagate_ops.rs  propagate_upload.rs  reconcile_tests.rs  remote_discovery.rs  state_tests.rs  types_compile.rs
crates/vfs-core/: Cargo.toml
crates/vfs-core/src/: lib.rs
crates/vfs-core/tests/: trait_object.rs
crates/vfs-macos/: Cargo.toml
crates/vfs-macos/src/: error.rs  lib.rs  messages.rs  vfs_impl.rs  xpc.rs
crates/vfs-macos/tests/: integration.rs
crates/vfs-off/: Cargo.toml
crates/vfs-off/src/: lib.rs
crates/vfs-off/tests/: noop.rs
crates/vfs-windows/: Cargo.toml
crates/vfs-windows/src/: callback.rs  error.rs  hydration.rs  lib.rs  pin.rs  placeholder.rs  registration.rs  util.rs  vfs_impl.rs
crates/vfs-windows/tests/: callback.rs  error_convert.rs  hydration.rs  integration.rs  pin.rs  placeholder.rs  registration.rs  vfs_impl.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check.rs  locale.rs  main.rs  source_scan.rs  sync.rs
docs/: architecture.md
docs/design/: 2026-05-05-iced-gui-visual-design.md  2026-05-06-branch-integration-design.md  2026-05-07-acceptance-test-gui-alignment-design.md  2026-05-07-acceptance-test-gui-alignment-plan.md  2026-05-10-error-feedback-design.md  2026-06-16-gui-acceptance-test-migration-design.md  2026-06-16-gui-acceptance-test-migration-plan.md  2026-06-16-gui-acceptance-test-tier2-multiuser-design.md  2026-06-16-rolling-alpha-release-design.md  2026-06-16-rolling-alpha-release-plan.md  2026-06-16-space-role-provisioning-design.md  2026-06-16-space-role-provisioning-plan.md
shell-integration/linux/oc-dbus-service/: Cargo.toml
shell-integration/linux/oc-dbus-service/src/: dbus_service.rs  emblem.rs  lib.rs  main.rs  socket_client.rs
shell-integration/linux/oc-dbus-service/tests/: dbus_tests.rs  emblem_tests.rs
shell-integration/windows/oc-contextmenu/: Cargo.toml
shell-integration/windows/oc-contextmenu/src/: lib.rs  menu_builder.rs  registration.rs
shell-integration/windows/oc-ipc/: Cargo.toml
shell-integration/windows/oc-ipc/src/: lib.rs
shell-integration/windows/oc-overlay/: Cargo.toml
shell-integration/windows/oc-overlay/src/: icons.rs  lib.rs  registration.rs
test/: CMakeLists.txt  testcapabilities.cpp  testspacesmanager.cpp
(+63 files in other folders)
