[workspace]
resolver = "2"
members = [
    "crates/sync-db",
    "crates/ocis-client",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["ownCloud Sync Contributors"]
license = "GPL-2.0-or-later"

[workspace.dependencies]
# async runtime
tokio = { version = "1.37", features = ["full"] }
# database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }
# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
# auth
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
keyring = { version = "2.3", features = ["linux-secret-service-rt-tokio-crypto-rust"] }
# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
# URL
url = { version = "2.5", features = ["serde"] }
# testing
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.10"
