[workspace]
resolver = "2"
members = [
    "crates/sync-db",
    "crates/ocis-client",
    "crates/vfs-core",
    "crates/vfs-off",
    "crates/vfs-windows",
    "crates/vfs-macos",
    "crates/sync-engine",
    "crates/socket-api",
    "crates/daemon",
    "crates/gui",
    "shell-integration/linux/oc-dbus-service",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["ownCloud Sync Contributors"]
license = "GPL-2.0-or-later"

[workspace.dependencies]
# async runtime
tokio = { version = "1.37", features = ["full"] }
# database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate", "chrono", "uuid"] }
# HTTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream", "multipart"] }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_millis = "0.1"
libc = "0.2"
# utilities
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
# auth
keyring = { version = "2.3", features = ["linux-secret-service-rt-tokio-crypto-rust"] }
# XML parsing
quick-xml = { version = "0.31", features = ["serialize"] }
# URL
url = { version = "2.5", features = ["serde"] }
# testing
tokio-test = "0.4"
wiremock = "0.6"
tempfile = "3.10"
# path utilities
camino = { version = "1.1", features = ["serde1"] }
# parallelism
rayon = "1.10"
# async trait support
async-trait = "0.1"
# Windows CloudFiles API
windows = { version = "0.52", features = [
    "Win32_Storage_CloudFilters",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }
