[package]
name = "acceptance-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[test]]
name = "account_setup"
path = "tests/account_setup.rs"

[[test]]
name = "duplicate_account"
path = "tests/duplicate_account.rs"

[[test]]
name = "sync"
path = "tests/sync.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
anyhow = "1"
tempfile = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemon = { path = "../daemon" }
sync-engine = { path = "../sync-engine" }
atspi = { version = "0.29", features = ["tokio"] }
atspi-common = "0.13"
zbus = "4"
bytes = "1"
nix = { version = "0.29", features = ["user"] }
