[package]
name = "acceptance-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[[test]]
name = "account_setup"
path = "tests/account_setup.rs"

[[test]]
name = "duplicate_account"
path = "tests/duplicate_account.rs"

[[test]]
name = "sync"
path = "tests/sync.rs"

[[test]]
name = "tray"
path = "tests/tray.rs"

[[test]]
name = "delete"
path = "tests/delete.rs"

[[test]]
name = "edit"
path = "tests/edit.rs"

[[test]]
name = "move_rename"
path = "tests/move_rename.rs"

[[test]]
name = "pause_resume"
path = "tests/pause_resume.rs"

[[test]]
name = "multi_account"
path = "tests/multi_account.rs"

[[test]]
name = "remove_one_of_two"
path = "tests/remove_one_of_two.rs"

[[test]]
name = "space_roles"
path = "tests/space_roles.rs"

[[test]]
name = "oc10_account_setup"
path = "tests/oc10_account_setup.rs"

[[test]]
name = "oc10_sync"
path = "tests/oc10_sync.rs"

[[test]]
name = "oc10_edit"
path = "tests/oc10_edit.rs"

[[test]]
name = "oc10_delete"
path = "tests/oc10_delete.rs"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
url = { workspace = true }
anyhow = "1"
tempfile = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemon = { path = "../daemon" }
sync-engine = { path = "../sync-engine" }
ocis-client = { path = "../ocis-client" }
atspi = { version = "0.30", features = ["tokio"] }
atspi-common = "0.14"
zbus = "5"
bytes = "1"
nix = { version = "0.31", features = ["user"] }
