[package]
name = "daemon"
version = "0.1.0"
edition = "2021"
default-run = "ocsyncd"
description = "ownCloud Infinite Scale desktop sync daemon"

[[bin]]
name = "ocsyncd"
path = "src/main.rs"

[dependencies]
ocis-client  = { path = "../ocis-client" }
sync-db      = { path = "../sync-db" }
vfs-core     = { path = "../vfs-core" }
vfs-off      = { path = "../vfs-off" }
sync-engine  = { path = "../sync-engine" }
socket-api   = { path = "../socket-api" }

tokio        = { version = "1", features = ["full"] }
tokio-util   = { version = "0.7", features = ["rt"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
toml         = "1"
notify       = "8"
uuid         = { version = "1", features = ["v4", "serde"] }
thiserror    = "2"
anyhow       = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
fs2          = "0.4"
dirs         = "6"
camino       = { version = "1", features = ["serde1"] }
url          = "2"
html-escape   = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
vfs-windows  = { path = "../vfs-windows" }

[target.'cfg(target_os = "macos")'.dependencies]
vfs-macos    = { path = "../vfs-macos" }

[dev-dependencies]
tempfile     = "3"
tokio        = { version = "1", features = ["full"] }
wiremock     = "0.6"

[package.metadata.deb]
name = "owncloud-sync"
maintainer = "ownCloud Sync Contributors <desktop@owncloud.com>"
copyright = "2024-2026 ownCloud Sync Contributors"
license-file = ["../../packaging/linux/debian/copyright", "0"]
extended-description = """\
Syncs files between your computer and an ownCloud Infinite Scale server. \
Includes shell integration for Nautilus and Dolphin file managers."""
depends = "libdbus-1-3, libsecret-1-0"
suggests = "python3-nautilus"
section = "net"
priority = "optional"
conf-files = ["/etc/xdg/autostart/owncloud-sync.desktop"]
# NOTE: run `cargo build --release --workspace` before `cargo deb --no-build`.
# The assets reference binaries from other workspace crates (ocsync, oc-dbus-service)
# that land in the shared target/release/ directory.
assets = [
    # binaries
    { source = "target/release/ocsyncd",         dest = "/usr/bin/",                          mode = "0755" },
    { source = "target/release/ocsync",           dest = "/usr/bin/",                          mode = "0755" },
    { source = "target/release/oc-dbus-service",  dest = "/usr/lib/owncloud/",                 mode = "0755" },
    # shell integration
    { source = "../../shell-integration/linux/nautilus/owncloud-nautilus.py", dest = "/usr/share/nautilus-python/extensions/", mode = "0644" },
    { source = "../../shell-integration/linux/dolphin/owncloud.desktop",      dest = "/usr/share/kservices5/ServiceMenus/",    mode = "0644" },
    # packaging assets
    { source = "../../packaging/linux/debian/owncloud-sync.desktop",               dest = "/usr/share/applications/",                     mode = "0644" },
    { source = "../../packaging/linux/debian/owncloud-sync.desktop",               dest = "/etc/xdg/autostart/",                          mode = "0644" },
    { source = "../../packaging/linux/debian/org.owncloud.FileManager1.service",   dest = "/usr/share/dbus-1/services/",                  mode = "0644" },
    { source = "../../packaging/linux/debian/owncloud-sync.service",               dest = "/usr/lib/systemd/user/",                       mode = "0644" },
]
