[package]
name = "gui-gtk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ocsync-gtk"
path = "src/main.rs"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_6"] }
ksni = "0.2"
tokio = { workspace = true, features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemon = { path = "../daemon" }
gui-core = { path = "../gui-core" }
