[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ocsync"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "svg"] }
rfd = "0.15"
rust-i18n = "4"
sys-locale = "0.3"
tray-icon = { version = "0.19", optional = true }
png = "0.17"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = "1"
dirs = "5"
toml = "0.8"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemon = { path = "../daemon" }
accesskit = { version = "0.24", optional = true }
accesskit_unix = { version = "0.21", optional = true, default-features = false, features = ["tokio"] }

# gtk (GTK3) only exists on Linux; the tray-icon backend there needs a
# running GTK event loop. macOS/Windows use tray-icon's native backends, so
# gtk must not be pulled in (its atk-sys etc. cannot build off-Linux).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.2", features = ["NSData"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[features]
default = ["tray-icon"]
tray-icon = ["dep:tray-icon", "dep:gtk"]
test-accessibility = ["dep:accesskit", "dep:accesskit_unix"]

[build-dependencies]
resvg = "0.42"
tiny-skia = "0.11"
png = "0.17"
