[package]
name = "gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ocsync"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14", features = ["tokio", "svg"] }
rfd = "0.17"
rust-i18n = "4"
sys-locale = "0.3"
tray-icon = { version = "0.24", optional = true }
png = "0.18"
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
uuid = { workspace = true }
anyhow = "1"
dirs = "6"
toml = "0.8"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
daemon = { path = "../daemon" }
accesskit = { version = "0.24", optional = true }
accesskit_unix = { version = "0.22", optional = true, default-features = false, features = ["tokio"] }

# gtk (GTK3) only exists on Linux; the tray-icon backend there needs a
# running GTK event loop. macOS/Windows use tray-icon's native backends
# (NSStatusItem / Shell_NotifyIcon), so gtk must NOT be pulled in there (its
# atk-sys etc. cannot build off-Linux). gtk is a non-optional Linux-only
# dependency and is referenced only from code gated on `target_os = "linux"`
# (see src/tray.rs); on other platforms it is simply never compiled. It is
# kept out of the `tray-icon` feature list so the feature can be enabled on
# macOS/Windows without trying to resolve a gtk dependency that doesn't exist
# on those targets.
[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tempfile = "3"

[features]
default = ["tray-icon"]
# `tray-icon` enables the cross-platform tray backend. The Linux backend
# additionally needs gtk, which is a non-optional Linux-only dependency above
# (so it is not listed here — listing `dep:gtk` would break feature
# resolution on macOS/Windows where the gtk dependency is absent).
tray-icon = ["dep:tray-icon"]
test-accessibility = ["dep:accesskit", "dep:accesskit_unix"]

[build-dependencies]
resvg = "0.45"
tiny-skia = "0.11"
png = "0.18"
