[package]
name = "ocis-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
oauth2 = { workspace = true }
keyring = { workspace = true }
quick-xml = { workspace = true }
url = { workspace = true }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
