[package]
name = "vfs-macos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vfs-core      = { path = "../vfs-core" }
camino        = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
async-trait   = { workspace = true }
tokio         = { workspace = true }
libc          = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
