[package]
name = "vfs-off"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vfs-core = { path = "../vfs-core" }
async-trait = { workspace = true }
camino = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
