[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
regex = "1"
walkdir = { workspace = true }
anyhow = { workspace = true }
