[package]
name = "oc-dbus-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "oc-dbus-service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
zbus = "5"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
