[package]
name = "oc-contextmenu"
version = "0.1.0"
edition = "2021"

[lib]
name = "oc_contextmenu"
crate-type = ["cdylib"]

[dependencies]
oc-ipc = { path = "../oc-ipc" }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Storage_FileSystem",
    "implement",
]
