[package]
name = "oc-overlay"
version = "0.1.0"
edition = "2021"

[lib]
name = "oc_overlay"
crate-type = ["cdylib"]

[dependencies]
oc-ipc = { path = "../oc-ipc" }

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "implement",
]
